# NEST-pre-work

./: README.md  package-lock.json  package.json  proof.json  verifying_key.rs  vk_to_rs.js
circuit/: multiply2numbers_0002.zkey  vk_multiply2numbers.json
zk-verifier/: Anchor.toml  package-lock.json  package.json
zk-verifier/programs/zk-verifier/: Cargo.toml
zk-verifier/programs/zk-verifier/src/: lib.rs  verifying_key.rs
zk-verifier/tests/: zk-verifier.ts
